# dqt

./: .gitignore  README.md  environment.yml  pyproject.toml  test.csv
dqt/: dqt.py
dqt/notebooks/: dxt_query_example.ipynb
dqt/sql/templates/macros/: macros.jinja
pydqt/: __init__.py  pydqt.py  test.csv
pydqt/tests/: test_querying.py
pydqt/utils/: custom_filters.py
pydqt/workspaces/main/templates/: base.sql  example.sql
tests/: test_querying.py
workspaces/main/templates/: base.sql  test.sql
