[tool.poetry]
name = "pydqt"
version = "1.2.10"
description = "A package to help parameterise and macrofy sql queries"
authors = ["Mark Ingham <mark.ingham@ly.st>"]
readme = "README.md"
repository = "https://github.com/markingham77/dqt"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
jinja2 = "^3.1.2"
duckdb = "<=0.8.1"
python-dotenv = "^1.0.0"
decouple = "^0.0.7"
pytest = "^7.4.2"
sqlparse = "^0.4.4"
snowflake-connector-python = {extras = ["pandas"], version = "^3.6.0"}
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
